2008-08-29  Andreia Gaita <avidigal@novell.com>

	* LocationProvider.cpp: Force dynamic loader to use a specific
	minimum xulrunner version depending on which one it gets built with.

2008-08-07  Andreia Gaita <avidigal@novell.com> 

	* BrowserWindow.cpp: Remove cast macro calls that went walkies on gecko
	  1.9. EOL fixes.
	* windows.mak: Pass in the new defines to the windows build.
	* Widget.cpp: If we're building against gecko 1.9:
	  NS_XPCOMPROXY_CONTRACTID definition has been moved to an
	  unavailable header, define it. AppShell appears to have
	  disappeared, don't call it. Tweak the shutdown call to use the new
	  api.
	* LocationProvider.cpp: Don't call GRE_GetXPCOMPath on gecko 1.9, it
	  was removed. EOL fixes.
	* Makefile.am: Only use gluezilla_* headers if we're building against
	  gecko 1.8
	* interfaces.h: Tweak header include paths depending on which gecko
	  version we're building against. EOL fixes.

2008-06-11  Andreia Gaita <avidigal@novell.com> 

	* BrowserWindow.cpp: Fix missing return

2008-06-10  Andreia Gaita <avidigal@novell.com> 

	* BrowserWindow.cpp, BrowserWindow.h: Disable uri context listener (not
	  being used right now). Add context menu event listener, security
	  change callback.
	* gluezilla.h: Add context menu event and security change callback.
	* interfaces.h: Add support for context menu event listener.

2008-06-10  Andreia Gaita <avidigal@novell.com> 

	* Widget.h: Fix mismatching calls

2008-06-02  Andreia Gaita <avidigal@novell.com> 

	* gtkWidget.cpp, Widget.cpp, Widget.h: Clean up

2008-05-22  Andreia Gaita <avidigal@novell.com> 

	* BrowserWindow.cpp, gluezilla.h: Add more xpcom helper objects for
	  OnProgress

2008-05-20  Andreia Gaita <avidigal@novell.com> 

	* BrowserWindow.cpp: Added progress and request objects from the
	  loading events. Track progress updates.
	* gluezilla.h: Hook up new loading and progress events

2008-04-18  Andreia Gaita <avidigal@novell.com> 
